--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,26 @@
 body {
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    align-items: center;
-    font-family: sans-serif;
     background-image: url("img/background.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
-    color: #7b7b7c;
-    padding: 0 30px;
+    border: 1px solid red;
   }
+
+.task-container {
+  border: 5px solid #9FA0B0;
+  padding: 1rem;
+  background-color: #fcfcf7;
+  opacity: 0.5;
+  font-family: 'Montserrat', sans-serif;
+  color: #1c1c1c;
+}
+
+.row {
+  border: 1px solid palevioletred;
+}
+
+.title {
+  display: flex;
+  justify-content: center;
+  font-family: 'Grape Nuts', cursive;
+}
