--- a/src/index.css
+++ b/src/index.css
@@ -3,30 +3,29 @@ body {
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
-
   }
 
-.task-container {
-  border: 5px solid #9FA0B0;
+.container {
+  display: flex;
+  justify-content: center;
+}
+
+  .listitems {
+  display: flex;
+  flex-direction: column;  
+  align-items: center;
   padding: 1rem;
   background-color: #fcfcf7;
   opacity: 0.5;
   font-family: 'Montserrat', sans-serif;
   color: #1c1c1c;
-}
-
-.row {
-  border: 1px solid palevioletred;
-}
+  border: 2px solid #9190a1;
+  }
 
 .title {
   display: flex;
   justify-content: center;
   font-family: 'Grape Nuts', cursive;
+  color: #0f0f0f;
+  font-size: 6rem;
 }
-
-  .listitems {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-  }
