--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,7 @@ body {
     justify-content: center;
     font-family: 'Grape Nuts', cursive;
     color: #0f0f0f;
-    font-size: 6rem;
+    font-size: 4rem;
   }
 
 .container {
@@ -39,6 +39,11 @@ body {
   color: #1c1c1c;
 }
 
+.buttons {
+  display: flex;
+  justify-content: center;
+}
+
 button.btn.btn-edit {
   background-color: #9190a1;
   border: 2px solid #9190a1;
@@ -54,4 +59,26 @@ button.btn.btn-delete {
   font-weight: 700;
   opacity: 1;
   margin-left: 1rem;
+}
+
+/* Edition Mode */
+
+.edition-mode {
+  display: flex;
+  flex-direction: column;  
+  align-items: center;
+  border: 1px solid red;
+}
+
+button.btn.btn-saved {
+  background-color: #9190a1;
+  border: 2px solid #9190a1;
+  color: black;
+  opacity: 1;
+  margin-top: 1 rem;
+}
+
+h1.edit-mode {
+  display: flex;
+  align-items: center;
 }
