--- a/src/index.css
+++ b/src/index.css
@@ -132,8 +132,11 @@ button.btn.btn-saved {
   margin-top: 2rem;
 }
 
-/* Checkbox */
 
-/* .task-container {
+
+
+/* Checkbox */
+.completed {
   text-decoration: line-through;
-} */
+  opacity: 0.4;
+}
